@@ -1,6 +1,6 @@
 GammaLib information
 ====================
-* Version: 1.2.0.dev1 (5 August 2016)
+* Version: 1.2.0.dev1 (6 August 2016)
 * Author:  Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 
 [![Build Status](https://cta-jenkins.irap.omp.eu/buildStatus/icon?job=gammalib-integrate-os)](https://cta-jenkins.irap.omp.eu/job/gammalib-integrate-os/)
